fixed text alignment & removed .table-fixed css

--- a/Style and cleanup/Table.css
+++ b/Style and cleanup/Table.css
@@ -26,34 +26,24 @@ table {
   position: relative;
   border-collapse: collapse;
 }
-.table-fixed thead{
-    padding: 1rem;
-    width: 100%;
-    overflow: visible;
+.tableFixHead { 
+    overflow: auto; 
+    height: 37rem; 
 }
-.table-fixed tbody {
-    height: 37rem;
-    overflow-y: auto;
-    width: 100%;
-    padding: 1rem;
+.tableFixHead thead th { 
+    position: -webkit-sticky;
+    position: sticky; 
+    top: 0; 
+    z-index: 1; 
+    border: 1px #e9e9e9
 }
-.table-fixed thead,
-.table-fixed tbody,
-.table-fixed tr,
-.table-fixed td,
-.table-fixed th{
-    display: block;
-}
-.table-fixed tr:after {
-    content: "";
-    display: block;
-    visibility: hidden;
-    clear: both;
-}
-.table-fixed tbody td,
-.table-fixed thead > tr > th{
-    float: left;
-}
+table  { border-collapse: collapse; width: 100%; }
+th     { background:white; }
+.tableFixHead th {
+    box-shadow: 
+    inset 1px 1px -10px#e9e9e9, 
+    inset 1px 1px -10px #e9e9e9;
+  }
 #dropdown{
     padding: 1rem;
     margin-top: -6px;
@@ -63,6 +53,7 @@ table {
 }
 .input-group.mb-3.row{
      width: 50rem;
+     padding-bottom: 1rem;
 }
 #Thumbnail{
     padding: 1rem;
@@ -95,9 +86,6 @@ table {
 .checkbox-menu li.active label:hover,
 .checkbox-menu li.active label:focus {
     background-color: #b8b8ff;
-}
-input.form-control{
-  padding-bottom:3px;
 }
 .img-responsive{
     padding: 1rem;
